fixed square boxes covering stars

--- a/starships/Starships/style.css
+++ b/starships/Starships/style.css
@@ -43,12 +43,168 @@ element.style {
     background: url(http://www.script-tutorials.com/demos/360/images/twinkling.png) top center;
 }
 
+
+
+  
+  
+  #loading-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
+  
+  #loading-text {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: whitesmoke;
+    width: 100px;
+    height: 30px;
+    margin: -7px 0 0 -45px;
+    text-align: center;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 20px;
+  }
+  
+  #loading-content {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 170px;
+    height: 170px;
+    margin: -85px 0 0 -85px;
+    border: 3px solid #F00;
+  }
+  
+
+  
+  #loading-content:before {
+    content: "";
+    position: absolute;
+    border: 3px solid #00F;
+    left: 5px;
+    right: 5px;
+    top: 5px;
+    bottom: 5px;
+  }
+  
+  #loading-content {
+    border: 3px solid transparent;
+    border-top-color: blue;
+    border-bottom-color: red;
+    border-radius: 50%;
+    -webkit-animation: loader 2s linear infinite;
+    -moz-animation: loader 2s linear infinite;
+    -o-animation: loader 2s linear infinite;
+    animation: loader 2s linear infinite;
+  }
+  
+  #loading-content:before {
+    border: 3px solid transparent;
+    border-top-color: red;
+    border-bottom-color: blue;
+    border-radius: 50%;
+    -webkit-animation: loader 3s linear infinite;
+      -moz-animation: loader 2s linear infinite;
+    -o-animation: loader 2s linear infinite;
+    animation: loader 3s linear infinite;
+  }
+  
+
+  
+  @-webkit-keyframes loaders {
+    0% {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes loader {
+    0% {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  
+  #content-wrapper {
+    color: #FFF;
+    position: fixed;
+    left: 0;
+    top: 20px;
+    width: 100%;
+    height: 100%;
+  }
+  
+  #header
+  {
+    width: 800px;
+    margin: 0 auto;
+    text-align: center;
+    height: 100px;
+    background-color: #666;
+  }
+  
+  #content
+  {
+    width: 800px;
+    height: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: transparent;
+  }
+/*
+html, body {
+	width: 100%;
+  height: 100%;
+  margin: 0px;
+	padding: 0px;
+	overflow: hidden;
+  
+  display: flex;
+}
+
+div[class*=wrapper] {
+	height: 100%;
+	width: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+div[class*=loader] {
+  position: relative;
+  width: 200px;
+  height: 200px;
+}*/
+/* 
+=======================
+    Square Preloader
+=======================
+*/
+
+
 .stars, .tooltip__background, .twinkling {
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: -1;
+    z-index: 10;
 
 }
 .box{
@@ -65,10 +221,25 @@ h1{
     font-size: 2rem;
 }
 
-/* .main{
 
+html, body {
+    background: #222;
+    display: block;
+    height: 100%;
+  }
+  
+  canvas {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
+
+
+
+ .main{
+    height: 10px;
  }
-
+/*
  <<<DO AN API CALL TO FIX IMAGE ISSUES?>>>
 .sideborder{
 
